--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,36 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Next.js build output
+.next/
+out/
 
-# testing
-/coverage
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# System files
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
+# TypeScript
+*.tsbuildinfo
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-.env
+# Vercel
+.vercel/
 
-# vercel
-.vercel
+# Editor settings
+.vscode/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# OS-specific files
+*.swp
 
-# public images
-public/bg
-public/cards
-public/brands
+# Optional - project-specific ignores
+# (Add here if you have temp folders like /important_backup or /temp)
 
-# F..ing annoying
-tsconfig.json
